test/sema/positive/let1.impala
fn f() -> i32 {
    let x:i32 = 4;
    x
}
