test/sema/negative/assign.impala
fn foo() -> () {
    let mut x = 23_u64;
    x += 42;
}
